@@ -18,7 +18,7 @@ Giles Russell						22 Nov 1999
 Greg Haerr						14 Jul 1999-20 Jul 1999
 Harry Kalogirou 	<HarKal@rainbow.cs.unipi.gr>	20 Jun 2001-22 Oct 2001
 Mario Frasca						20 Jan 2000-14 Feb 2000
-Paul Nasrat		<pnasrat@uk.now.com>		28 Aug 2001
+Paul Nasrat		<pnasrat@uk.now.com>		29 Oct 2001
 Per Olofsson		<MagerValp@cling.gu.se> 	25 Feb 2000
 Peter L Vachuska	<pvachusk@nconnect.net> 	13 Aug 2001
 Riley Williams		<rhw@MemAlpha.cx>		16 Nov 1998-29 Oct 2001
@@ -35,6 +35,10 @@ Mon Oct 29 13:12:49 GMT 2001	Riley Williams <rhw@MemAlpha.cx>
 	* Corrected mis-spelt email for Harry Kalogirou in CHANGELOG entry.
 	* Spellchecked CHANGELOG using British English spellings throughout.
 	* Updated TODO document to reflect targets for various releases.
+
+Mon Oct 29 11:03:54 GMT 2001	Paul Nasrat <pnasrat@uk.now.com>.
+
+	* Makefile patches to compile for SiBO.
 
 Sat Oct 27 00:06:00 EEST 2001	Roman Festchook <roma@polesye.net>
 
